Prepared for Release

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
 		<md-list ng-cloak >
 			<md-list-item  ng-click="openNewProject()">
 				<p >Neues Projekt erstellen</p>		
-				<md-icon md-svg-icon="images/icons/add182.svg" style="color:white" aria-label="Projekt erstellen"></md-icon>
+				<md-icon md-svg-icon="icons/add182.svg" style="color:white" aria-label="Projekt erstellen"></md-icon>
 				<md-checkbox></md-checkbox>
 			</md-list-item>
 			<md-divider ></md-divider>
