Add Github Link, Added Copyright

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,6 +44,10 @@
     margin-bottom:10px !important;
   }
 }
-.titleBar{
-
+#copyright{
+  color:grey;
+  text-align:center;
+  position:fixed;
+  bottom:10px;
+  left:10px;
 }
