--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,6 +12,7 @@
 				
 			</md-list-item>
 		</md-list>
+		<small id="copyright">By Livio Brunner</small>
 	</section>
 	<section flex class="project-overview">
 		<md-content flex>
