Added Text wrapping

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,9 +21,7 @@
 					<div class="md-list-item-text">
 						<h2>{{project.Name}}</h2>
 						<h4>{{project.FirstName}} {{project.LastName}}</h4>
-						<p>
-							{{project.Notes}}
-						</p>
+						<p>{{project.Notes}}</p>
 					</div>
 					<md-divider inset></md-divider>
 				</md-list-item>
