--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,10 @@
 
-<div layout="row">
-	<section class="sidebar md-whiteframe-5dp " ng-class="menuClass">
-		<md-list ng-cloak >
+<div layout="row" flex>
+	<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-4dp" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+      <md-list ng-cloak >
 			<md-list-item  ng-click="openNewProject()">
 				<p >Neues Projekt erstellen</p>		
 				<md-icon md-svg-icon="icons/add182.svg" style="color:white" aria-label="Projekt erstellen"></md-icon>
-				<md-checkbox></md-checkbox>
 			</md-list-item>
 			<md-divider ></md-divider>
 			<md-list-item ng-repeat="class in classes" ng-click="href('/class/{{class.Id}}')">
@@ -14,8 +13,8 @@
 			</md-list-item>
 		</md-list>
 		<small id="copyright">By Livio Brunner</small>
-	</section>
-	<section flex class="project-overview">
+    </md-sidenav>
+	<section flex layout="column" class="project-overview">
 		<md-content flex>
 			<md-list>
 				<md-list-item class="md-3-line" ng-repeat="project in projects | orderBy: '-CreationDate'">
